+++++++++++
Python News
+++++++++++

What's New in Python 3.3.1?
===========================

*Release date: XX-XX-XXXX*

Core and Builtins
-----------------

- Issue #16046: Fix loading sourceless legacy pyos.

- Issue #15379: Fix passing of non-BMP characters as integers for the charmap
  decoder (already working as unicode strings).  Patch by Serhiy Storchaka.

- Issue #15144: Fix possible integer overflow when handling pointers as
  integer values, by using Py_uintptr_t instead of size_t.  Patch by
  Serhiy Storchaka.

- Issue #15965: Explicitly cast AT_FDCWD as (int).  Required on Solaris 10
  (which defines AT_FDCWD as 0xffd19553), harmless on other platforms.

- Issue #15839: Convert SystemErrors in super() to RuntimeErrors.

- Issue #15846: Fix SystemError which happened when using ast.parse in an
  exception handler on code with syntax errors.

- Issue #15801: Make sure mappings passed to '%' formatting are actually
  subscriptable.

Library
-------

- Issue #15222: Insert blank line after each message in mbox mailboxes

- Issue #16013: Fix CSV Reader parsing issue with ending quote characters.
  Patch by Serhiy Storchaka.

- Issue #15421: Fix an OverflowError in Calendar.itermonthdates() after
  datetime.MAXYEAR.  Patch by Cédric Krier.

- Issue #15970: xml.etree.ElementTree now serializes correctly the empty HTML
  elements 'meta' and 'param'.

- Issue #15842: The SocketIO.{readable,writable,seekable} methods now
  raise ValueError when the file-like object is closed.  Patch by Alessandro
  Moura.

- Issue #15876: Fix a refleak in the curses module: window.encoding.

- Issue #15881: Fixed atexit hook in multiprocessing.  Original patch
  by Chris McDonough.

- Issue #15340: Fix importing the random module when /dev/urandom cannot
  be opened.  This was a regression caused by the hash randomization patch.

- Issue #15841: The readable(), writable() and seekable() methods of BytesIO